# WitnessMe

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  cloudbuild.yaml  database.py  pyproject.toml  requirements-dev.txt  requirements.txt  stats.py  witnessme.py  wmapi.py  wmcli.py  wmdb.py
.github/workflows/: ci.yaml
dockerfiles/: Dockerfile.api  Dockerfile.gcloud  Dockerfile.selfhosted
tests/: conftest.py  test_api.py  test_grab.py  test_scan.py  test_scan_db.py  test_sig_scanning.py  test_target_parsing.py
witnessme/: __init__.py  database.py  headlessbrowser.py  parsers.py  reporting.py  scan.py  signatures.py  utils.py
witnessme/api/: models.py
witnessme/commands/: __init__.py  grab.py  screenshot.py
witnessme/console/: witnessme.py  wmapi.py  wmdb.py
witnessme/signatures/: ace_4710_device_manager.yaml  admanager.yml  airos.yml  alienvault_usm_if_on_aws.yml  altova_license_server.yaml  apache_lenya.yaml  apache_tomcat.yaml  apache_tomcat_default_page.yaml  appinternals_xpert.yml  atutor_web_cms.yml  avamar_virtual_machine_proxy.yml  avaya_aura_system_manager_6_1.yaml  avaya_b179.yaml  avocent_dsr8035.yml  axeda_policy_server.yml  axistv_login.yaml  barracuda_web_filter.yaml  bitnami_redmine.yml  bomgar_device.yml  brother_8480dn.yml  brother_hl-2130.yml  brother_hl-2250dn.yml  brother_hl-2270dw.yaml  brother_hl-5070n.yml  brother_hl-5350dn.yaml  brother_hl-5370dw.yaml  brother_ql-710w.yaml  brother_ql-720.yml  buffalo_linkstation.yml  buffalo_pcast_media_nas_server.yaml  buffalo_terastation.yml  ca_network_flow_analysis.yml  (+266 more)
(+2 files in other folders)
